# poc-itot-convergence-mw

./: .gitignore  CMakeLists.txt  README.md  gateway.c  kafka_consumer.c  pubsub_config_file.json  simulator.c  subscriber_machine.c
mappings/: data_mapping.json
